# Streaming

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-book.yml
book/: 01_repository_discovery.md  02_incremental_parser.md  03_kafka_topics.md  04_neo4j_ingestion.md  05_mongodb_ingestion.md  06_replay_verification.md  README.md  _config.yml  _toc.yml  architecture.md  conclusion.md  intro.md
book/kafka/: edge-sample.txt  edges_sample.json  error-sample.txt  errors_sample.json  metadata-sample.txt  node-sample.txt  nodes_sample.json
book/logs/: kafka_connectors_list.json
book/notebooks/: pipeline_demo.ipynb
config/kafka/: connect-neo4j-sink.json  topics.yml
config/mongodb/: indexes.js
config/neo4j/: constraints.cypher
data/processed/: discovered_files.json
evidence/: README.md
evidence/kafka/: edge-sample.txt  edges_sample.json  error-sample.txt  errors_sample.json  metadata-sample.txt  metadata_sample.json  node-sample.txt  nodes_sample.json
markdowns/: architecture.md  demo_logging.md  setup.md  src_usage.md
scripts/: capture_connect_status.sh  capture_kafka_samples.sh  capture_mongodb_indexes.sh  check_infra.sh  create_topics.sh  demo_terminal_1_spark.sh  demo_terminal_2_run_pipeline.sh  init_infra.sh  reset_demo_state.sh  run_metadata_stream.sh  stop_infra.sh
src/: __init__.py
src/common/: __init__.py  config.py  hashing.py  logging_utils.py  schemas.py
src/parser_service/: main.py  (+5 more)
tests/: test_core_behaviors.py  test_discover_files.py  test_parser_identity_and_events.py
(+13 files in other folders)
