[project]
name = "cpg-streaming-accelerate-lab"
version = "0.1.0"
description = "Incremental CPG construction and streaming ingestion pipeline for huggingface/accelerate"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Team" }
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.jupyter-book]
title = "Incremental CPG Streaming Pipeline"
author = "Your Team"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
    "data",
    "docker-data",
    "book",
    "outputs",
    "evidence",
    ".venv",
    ".git",
    "__pycache__",
]
